Fix toggle menu, it goes over bg-image thanks to z-index. Also added the learner-html files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,7 @@ body {
     display: flex;
     flex-direction: column;
 }
-/* ---------------------------------------------------------------- header */
-
+/* ---------------------------------------------------------------- HEADER */
 header {
     border-top: 8px solid #353628;
 }
@@ -28,7 +27,7 @@ label {
     box-sizing: border-box;
     background: #fafafa;
     height: 80px;
-    width: 100%
+    width: 100%;
 }
 
 #logo {
@@ -99,6 +98,7 @@ label {
         left: -100%;
         text-align: center;
         transition: all .5s;
+        z-index: 1;
     }
 
     .navigation ul li {
@@ -121,15 +121,8 @@ label {
         left: 0;
     }
 }
-
-
-
-
-
-
-
-/* ---------------------------------------------------------------- banner */
-
+/* ---------------------------------------------------------------- END HEADER */
+/* ---------------------------------------------------------------- BANNER */
 .banner-container{
     background: url(../images/banner.jpg) no-repeat center; 
     -moz-background-size: cover;
@@ -158,9 +151,8 @@ label {
     letter-spacing: 2px;
     font-size: 30px;
 }
-
-
-/* ---------------------------------------------------------------- buttons */
+/* ---------------------------------------------------------------- END BANNER */
+/* ---------------------------------------------------------------- BUTTONS */
 #select-user {
     padding-top: 20px;
 }
@@ -208,10 +200,8 @@ label {
     }
 
 }
-
-/* ---------------------------------------------------------------- end buttons */
-
-/* ---------------------------------------------------------------- footer */
+/* ---------------------------------------------------------------- END BUTTONS */
+/* ---------------------------------------------------------------- FOOTER */
 footer {
     background-color: #353628;
     color: #fafafa;
@@ -235,5 +225,4 @@ footer {
   padding: 3%;
   color: #fff;
 }
-
-/* ---------------------------------------------------------------- end footer */
+/* ---------------------------------------------------------------- END FOOTER */
